# los-altos-hacks-5

./: README.md
first-responder-app/first-responder-app/: Bluetooth.swift  ContentView.swift  CustomerView.swift  LocationManager.swift  ResponderView.swift  ViewModel.swift  first_responder_appApp.swift  introView.swift
first-responder-app/first-responder-app.xcodeproj/: project.pbxproj
first-responder-app/first-responder-app.xcodeproj/project.xcworkspace/xcuserdata/arpandhatt.xcuserdatad/: UserInterfaceState.xcuserstate
first-responder-app/first-responder-app.xcodeproj/xcuserdata/arpandhatt.xcuserdatad/xcschemes/: xcschememanagement.plist
first-responder-app/first-responder-app/Assets.xcassets/blue-dark.colorset/: Contents.json
first-responder-app/first-responder-app/Assets.xcassets/blue-light.colorset/: Contents.json
first-responder-app/first-responder-app/Assets.xcassets/red-dark.colorset/: Contents.json
first-responder-app/first-responder-app/Assets.xcassets/yellow.colorset/: Contents.json
mesh-code/: Cargo.toml  gps.py  mouse_detect.py
mesh-code/data-transcoder/: Cargo.toml
mesh-code/data-transcoder/src/: lib.rs
mesh-code/hci/: Cargo.toml
mesh-code/hci/src/: lib.rs
mesh-code/mesh-node/: Cargo.toml
mesh-code/mesh-node/src/: main.rs
