[package]
name = "mesh-node"
version = "0.1.0"
authors = ["Arpan Dhatt <ary.dhatt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-transcoder = { path = "../data-transcoder" }
hci = { path = "../hci" }
